[package]
name = "propchain-tests"
version = "1.0.0"
authors = ["PropChain Team <dev@propchain.io>"]
edition = "2021"
publish = false

[lib]
name = "propchain_tests"
path = "lib.rs"

[dependencies]
# ink! dependencies
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

# Testing dependencies
ink_e2e = "5.0.0"
ink_env = { version = "5.0.0", default-features = false }

# Contract dependencies
propchain-contracts = { path = "../contracts/lib", default-features = false }
property-token = { path = "../contracts/property-token", default-features = false }

# Async runtime
tokio = { version = "1.0", features = ["full"], optional = true }

# Utilities
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }


# Coverage tools (optional)
[dev-dependencies.cargo-tarpaulin]
version = "0.27"
optional = true

[dev-dependencies]
ink_e2e = "5.0.0"
tokio = { version = "1.0", features = ["full"] }
propchain-contracts = { path = "../contracts/lib", default-features = false }
property-token = { path = "../contracts/property-token", default-features = false }
proptest = { version = "1.4", default-features = false }

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "propchain-contracts/std",
    "property-token/std",
    "serde/std",
    "serde_json/std",
    "tokio",
]
e2e-tests = ["std", "ink_e2e"]
