[package]
name = "propchain-contracts"
version = "1.0.0"
authors = ["PropChain Team <dev@propchain.io>"]
edition = "2021"
description = "Decentralized real estate infrastructure smart contracts"
license = "MIT"
homepage = "https://propchain.io"
repository = "https://github.com/MettaChain/PropChain-contract"
keywords = ["blockchain", "real-estate", "smart-contracts", "ink", "substrate"]
categories = ["cryptography::cryptocurrencies", "web-programming::http-client"]
readme = "../../README.md"
publish = false

[dependencies]
ink = { workspace = true, features = ["std"] }
scale = { workspace = true, features = ["std"] }
scale-info = { workspace = true, features = ["std"] }
propchain-traits = { path = "../traits" }

# Additional dependencies for oracle functionality
# serde = { version = "1.0", default-features = false, features = ["derive"] }
# hex = { version = "0.4", default-features = false }

# OpenBrush for contract extensions (optional)
openbrush = { version = "4.0.0-beta", default-features = false, features = ["psp22"], optional = true }

[dev-dependencies]
ink_e2e = "5.0.0"

[lib]
name = "propchain_contracts"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush?/std",
]
ink-as-dependency = []

# Optional features for different contract types
psp22 = ["openbrush/psp22"]

# Testing features
e2e-tests = []

# Internal ink! dylint features (suppress warnings)
__ink_dylint_Storage = []
__ink_dylint_EventBase = []
__ink_dylint_Constructor = []