[package]
name = "propchain-traits"
version = "1.0.0"
authors = ["PropChain Team <dev@propchain.io>"]
edition = "2021"
publish = false

[dependencies]
ink = { workspace = true, default-features = false }
scale = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }

[lib]
name = "propchain_traits"
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
